--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
 
 [project.urls]
 Issues = "https://github.com/bkushigian/Pious/issues"
+Homepage = "https://github.com/bkushigian/Pious"
 
 [build-system]
 requires = ["hatchling"]
