--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "pious"
-version = "0.0.0.dev12"
+version = "0.0.0.dev13"
 authors = [{ name = "Ben Kushigian", email = "bkushigian@gmail.com" }]
 description = "The PioSOLVER Utility Suite"
 readme = "README.md"
@@ -16,6 +16,7 @@ dependencies = [
     "mplcursors>=0.5.1",
     "ansi>=0.3.7",
     "pytest>=8.2.2",
+    "tabulate>=0.9.0"
 ]
 
 [project.urls]
