--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "pious"
-version = "0.0.0.dev13"
+version = "0.0.0.dev14"
 authors = [{ name = "Ben Kushigian", email = "bkushigian@gmail.com" }]
 description = "The PioSOLVER Utility Suite"
 readme = "README.md"
@@ -18,6 +18,9 @@ dependencies = [
     "pytest>=8.2.2",
     "tabulate>=0.9.0"
 ]
+
+[project.scripts]
+pious = "pious.__main__:main"
 
 [project.urls]
 Issues = "https://github.com/bkushigian/Pious/issues"
