--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "pious"
-version = "0.0.0.dev14"
+version = "0.0.0.dev15"
 authors = [{ name = "Ben Kushigian", email = "bkushigian@gmail.com" }]
 description = "The PioSOLVER Utility Suite"
 readme = "README.md"
@@ -11,12 +11,13 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
+    "numpy>=2.0.0",
     "matplotlib>=3.7.1",
     "pandas>=2.0.3",
     "mplcursors>=0.5.1",
     "ansi>=0.3.7",
     "pytest>=8.2.2",
-    "tabulate>=0.9.0"
+    "tabulate>=0.9.0",
 ]
 
 [project.scripts]
